--- a/Useless.ipynb
+++ b/Useless.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a dataframe with Date, UserName, and Password\n",
-    "df = pd.DataFrame(columns=['DateCreated', 'UserName', 'UserID' ,'Password'])\n",
+    "df = pd.DataFrame(columns=['DateCreated', 'UserName', 'UserID' ,'ChannelID'])\n",
     "\n",
     "# export this dataframe to a csv file\n",
     "df.to_csv('user_data.csv', index=False)"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a dataframe with User, URL and Schedule\n",
-    "df = pd.DataFrame(columns=['UserID', 'URL', 'Schedule'])\n",
+    "df = pd.DataFrame(columns=['UserID','ChannelID','URL', 'Hour', 'Minute'])\n",
     "\n",
     "# export this dataframe to a csv file\n",
     "df.to_csv('url_data.csv', index=False)\n",
@@ -68,10 +68,190 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1900-01-01 00:15:00\n",
+      "1900-01-01 00:30:00\n",
+      "1900-01-01 00:45:00\n",
+      "1900-01-01 01:00:00\n",
+      "1900-01-01 01:15:00\n",
+      "1900-01-01 01:30:00\n",
+      "1900-01-01 01:45:00\n",
+      "1900-01-01 02:00:00\n",
+      "1900-01-01 02:15:00\n",
+      "1900-01-01 02:30:00\n",
+      "1900-01-01 02:45:00\n",
+      "1900-01-01 03:00:00\n",
+      "1900-01-01 03:15:00\n",
+      "1900-01-01 03:30:00\n",
+      "1900-01-01 03:45:00\n",
+      "1900-01-01 04:00:00\n",
+      "1900-01-01 04:15:00\n",
+      "1900-01-01 04:30:00\n",
+      "1900-01-01 04:45:00\n",
+      "1900-01-01 05:00:00\n",
+      "1900-01-01 05:15:00\n",
+      "1900-01-01 05:30:00\n",
+      "1900-01-01 05:45:00\n",
+      "1900-01-01 06:00:00\n",
+      "1900-01-01 06:15:00\n",
+      "1900-01-01 06:30:00\n",
+      "1900-01-01 06:45:00\n",
+      "1900-01-01 07:00:00\n",
+      "1900-01-01 07:15:00\n",
+      "1900-01-01 07:30:00\n",
+      "1900-01-01 07:45:00\n",
+      "1900-01-01 08:00:00\n",
+      "1900-01-01 08:15:00\n",
+      "1900-01-01 08:30:00\n",
+      "1900-01-01 08:45:00\n",
+      "1900-01-01 09:00:00\n",
+      "1900-01-01 09:15:00\n",
+      "1900-01-01 09:30:00\n",
+      "1900-01-01 09:45:00\n",
+      "1900-01-01 10:00:00\n",
+      "1900-01-01 10:15:00\n",
+      "1900-01-01 10:30:00\n",
+      "1900-01-01 10:45:00\n",
+      "1900-01-01 11:00:00\n",
+      "1900-01-01 11:15:00\n",
+      "1900-01-01 11:30:00\n",
+      "1900-01-01 11:45:00\n",
+      "1900-01-01 12:00:00\n",
+      "1900-01-01 12:15:00\n",
+      "1900-01-01 12:30:00\n",
+      "1900-01-01 12:45:00\n",
+      "1900-01-01 13:00:00\n",
+      "1900-01-01 13:15:00\n",
+      "1900-01-01 13:30:00\n",
+      "1900-01-01 13:45:00\n",
+      "1900-01-01 14:00:00\n",
+      "1900-01-01 14:15:00\n",
+      "1900-01-01 14:30:00\n",
+      "1900-01-01 14:45:00\n",
+      "1900-01-01 15:00:00\n",
+      "1900-01-01 15:15:00\n",
+      "1900-01-01 15:30:00\n",
+      "1900-01-01 15:45:00\n",
+      "1900-01-01 16:00:00\n",
+      "1900-01-01 16:15:00\n",
+      "1900-01-01 16:30:00\n",
+      "1900-01-01 16:45:00\n",
+      "1900-01-01 17:00:00\n",
+      "1900-01-01 17:15:00\n",
+      "1900-01-01 17:30:00\n",
+      "1900-01-01 17:45:00\n",
+      "1900-01-01 18:00:00\n",
+      "1900-01-01 18:15:00\n",
+      "1900-01-01 18:30:00\n",
+      "1900-01-01 18:45:00\n",
+      "1900-01-01 19:00:00\n",
+      "1900-01-01 19:15:00\n",
+      "1900-01-01 19:30:00\n",
+      "1900-01-01 19:45:00\n",
+      "1900-01-01 20:00:00\n",
+      "1900-01-01 20:15:00\n",
+      "1900-01-01 20:30:00\n",
+      "1900-01-01 20:45:00\n",
+      "1900-01-01 21:00:00\n",
+      "1900-01-01 21:15:00\n",
+      "1900-01-01 21:30:00\n",
+      "1900-01-01 21:45:00\n",
+      "1900-01-01 22:00:00\n",
+      "1900-01-01 22:15:00\n",
+      "1900-01-01 22:30:00\n",
+      "1900-01-01 22:45:00\n",
+      "1900-01-01 23:00:00\n",
+      "1900-01-01 23:15:00\n",
+      "1900-01-01 23:30:00\n",
+      "1900-01-01 23:45:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "def print_recurring_times(hour, minute):\n",
+    "    # set the default date\n",
+    "    start_time = datetime(year=1900, month = 1, day= 1, hour=0, minute=0)\n",
+    "\n",
+    "    # the last hour and minute of the date (24 hours)\n",
+    "    last_hour = 23\n",
+    "    last_minute = 59\n",
+    "    end_time = datetime(year=1900, month = 1, day= 1, hour=last_hour, minute=last_minute)\n",
+    "\n",
+    "    # create a timedelta object\n",
+    "    timedelta_obj = timedelta(hours=hour, minutes=minute)\n",
+    "\n",
+    "    # while start_time < end_time, add the timedelta_obj to start_time\n",
+    "    while start_time <= end_time:\n",
+    "        # if smaller after add, then print\n",
+    "        if start_time + timedelta_obj <= end_time:\n",
+    "            start_time += timedelta_obj\n",
+    "            print(start_time)\n",
+    "        else:\n",
+    "            start_time += timedelta_obj\n",
+    "\n",
+    "\n",
+    "print_recurring_times(0, 15)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create dataframe for Schedule Data\n",
+    "\n",
+    "df = pd.DataFrame(columns=['UserID', 'URL', 'Hour', 'Minute']) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'send'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[39mawait\u001b[39;00m channel\u001b[39m.\u001b[39msend(msg)\n\u001b[1;32m     16\u001b[0m \u001b[39m# send msg to user\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m \u001b[39mawait\u001b[39;00m send_msg(\u001b[39m'\u001b[39m\u001b[39mHello World\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     19\u001b[0m \u001b[39m# innit bot\u001b[39;00m\n\u001b[1;32m     20\u001b[0m client\u001b[39m.\u001b[39mrun(BOT_TOKEN)\n",
+      "Cell \u001b[0;32mIn[6], line 14\u001b[0m, in \u001b[0;36msend_msg\u001b[0;34m(msg)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[39masync\u001b[39;00m \u001b[39mdef\u001b[39;00m \u001b[39msend_msg\u001b[39m(msg):\n\u001b[1;32m     12\u001b[0m     channel \u001b[39m=\u001b[39m client\u001b[39m.\u001b[39mget_channel(CHANNEL_ID)\n\u001b[0;32m---> 14\u001b[0m     \u001b[39mawait\u001b[39;00m channel\u001b[39m.\u001b[39msend(msg)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'send'"
+     ]
+    }
+   ],
+   "source": [
+    "# Try send message to discord server\n",
+    "\n",
+    "import discord\n",
+    "from discord.ext import commands\n",
+    "\n",
+    "BOT_TOKEN = 'MTA5OTM0MTMyMDg0MzE3NDA4OA.G8uu-z.Orwh7Dk1lDnOgdmsyQcy4Ykl3hisq2JEldFww4'\n",
+    "CHANNEL_ID = 1083640013180387352\n",
+    "\n",
+    "client = commands.Bot(command_prefix='/', intents=discord.Intents.default())\n",
+    "# send msg to channel\n",
+    "async def send_msg(msg):\n",
+    "    channel = client.get_channel(CHANNEL_ID)\n",
+    "\n",
+    "    await channel.send(msg)\n",
+    "\n",
+    "# send msg to user\n",
+    "await send_msg('Hello World')\n",
+    "\n",
+    "# innit bot\n",
+    "client.run(BOT_TOKEN)"
+   ]
   }
  ],
  "metadata": {
